# FOOD_slay

./: Nutri-Score_Updated-algorithm_20240404.xlsx  README.md  data_filet.py  main.py  pyproject.toml  remove_physical_outliers.py
template_teaching_project_ml_OFF/: .gitignore
template_teaching_project_ml_OFF/functions/: Divide_train_test_dataset.py  NaN_visualization.py  charge_visualize_dataset.py  generate_clean_subsamples.py  generate_clean_subsamples2.py
template_teaching_project_ml_OFF/notebooks/: Data visualisation.py  Missing data imputation.py  data_visualisation.ipynb  data_visualisation2.ipynb
template_teaching_project_ml_OFF/scripts/: ML_openfoodfacts_pipeline.py  tache0_alex_gueydan.py
